added component Checkbox Buttons list

--- a/Common.blocks/checkbox-list/__list-wrapper/checkbox-list__list-wrapper.scss
+++ b/Common.blocks/checkbox-list/__list-wrapper/checkbox-list__list-wrapper.scss
@@ -1,57 +1,52 @@
-.checkbox-list {
+.checkbox-list__list-wrapper {
 
 }
 
 @media only screen and (min-width: 321px) {
-  .checkbox-list {
+  .checkbox-list__list-wrapper {
 
   }
 }
 
 @media only screen and (min-width: 576px) {
-  .checkbox-list {
+  .checkbox-list__list-wrapper {
 
   }
 }
 
 @media only screen and (min-width: 768px) {
-  .checkbox-list {
+  .checkbox-list__list-wrapper {
 
   }
 }
 
 @media only screen and (min-width: 992px) {
-  .checkbox-list {
+  .checkbox-list__list-wrapper {
 
   }
 }
 
 @media only screen and (min-width: 1200px) {
-  .checkbox-list {
+  .checkbox-list__list-wrapper {
 
   }
 }
 
 @media only screen and (min-width: 1440px) {
-  .checkbox-list {
+  .checkbox-list__list-wrapper {
 
   }
 }
 
 @media only screen and (min-width: 1681px) {
-  .checkbox-list {
+  .checkbox-list__list-wrapper {
 
   }
 }
 
 @media only screen and (min-width: 1681px) {
-  .checkbox-list {
+  .checkbox-list__list-wrapper {
 
   }
 }
 
-
-@import './__header/checkbox-list__header';
-@import './__icon/checkbox-list__icon';
-@import './__expandable/checkbox-list__expandable';
-@import './__list-wrapper/checkbox-list__list-wrapper';
