--- a/Common.blocks/form-elements/form-elements.pug
+++ b/Common.blocks/form-elements/form-elements.pug
@@ -1,3 +1,6 @@
+include ./__middle-col/form-elements__middle-col.pug
+include ./__columns-wrapper/form-elements__columns-wrapper.pug
+include ./__big-col/form-elements__big-col.pug
 include ./__component-wrapper/form-elements__component-wrapper.pug
 
 include ./__corrective-wrapper/form-elements__corrective-wrapper.pug
@@ -16,3 +19,7 @@ mixin form-elements(modifiers, ...argsArr)
             block
 
 
+
++form-elements__big-col
++form-elements__columns-wrapper
++form-elements__middle-col
