--- a/Common.blocks/form-elements/form-elements.scss
+++ b/Common.blocks/form-elements/form-elements.scss
@@ -54,3 +54,6 @@
 @import './__left-col/form-elements__left-col';
 @import './__corrective-wrapper/form-elements__corrective-wrapper';
 @import './__component-wrapper/form-elements__component-wrapper';
+@import './__big-col/form-elements__big-col';
+@import './__columns-wrapper/form-elements__columns-wrapper';
+@import './__middle-col/form-elements__middle-col';
