--- a/Common.blocks/form-elements/__middle-col/form-elements__middle-col.scss
+++ b/Common.blocks/form-elements/__middle-col/form-elements__middle-col.scss
@@ -1,57 +1,52 @@
-.checkbox-list {
+.form-elements__middle-col {
 
 }
 
 @media only screen and (min-width: 321px) {
-  .checkbox-list {
+  .form-elements__middle-col {
 
   }
 }
 
 @media only screen and (min-width: 576px) {
-  .checkbox-list {
+  .form-elements__middle-col {
 
   }
 }
 
 @media only screen and (min-width: 768px) {
-  .checkbox-list {
+  .form-elements__middle-col {
 
   }
 }
 
 @media only screen and (min-width: 992px) {
-  .checkbox-list {
+  .form-elements__middle-col {
 
   }
 }
 
 @media only screen and (min-width: 1200px) {
-  .checkbox-list {
+  .form-elements__middle-col {
 
   }
 }
 
 @media only screen and (min-width: 1440px) {
-  .checkbox-list {
+  .form-elements__middle-col {
 
   }
 }
 
 @media only screen and (min-width: 1681px) {
-  .checkbox-list {
+  .form-elements__middle-col {
 
   }
 }
 
 @media only screen and (min-width: 1681px) {
-  .checkbox-list {
+  .form-elements__middle-col {
 
   }
 }
 
-
-@import './__header/checkbox-list__header';
-@import './__icon/checkbox-list__icon';
-@import './__expandable/checkbox-list__expandable';
-@import './__list-wrapper/checkbox-list__list-wrapper';
