added radio buttons

--- a/Common.blocks/form-elements/form-elements.pug
+++ b/Common.blocks/form-elements/form-elements.pug
@@ -1,3 +1,4 @@
+include ./__component-title/form-elements__component-title.pug
 include ./__middle-col/form-elements__middle-col.pug
 include ./__columns-wrapper/form-elements__columns-wrapper.pug
 include ./__big-col/form-elements__big-col.pug
@@ -23,3 +24,4 @@ mixin form-elements(modifiers, ...argsArr)
 +form-elements__big-col
 +form-elements__columns-wrapper
 +form-elements__middle-col
++form-elements__component-title
