--- a/Common.blocks/form-elements/form-elements.scss
+++ b/Common.blocks/form-elements/form-elements.scss
@@ -57,3 +57,4 @@
 @import './__big-col/form-elements__big-col';
 @import './__columns-wrapper/form-elements__columns-wrapper';
 @import './__middle-col/form-elements__middle-col';
+@import './__component-title/form-elements__component-title';
