--- a/pages/index.scss
+++ b/pages/index.scss
@@ -406,3 +406,4 @@
 @import '../Common.blocks/list/list';
 @import '../Common.blocks/checkbox/checkbox';
 @import '../Common.blocks/room-details/room-details';
+@import '../Common.blocks/radio-buttons/radio-buttons';
