--- a/pages/index.scss
+++ b/pages/index.scss
@@ -407,3 +407,5 @@
 @import '../Common.blocks/checkbox/checkbox';
 @import '../Common.blocks/room-details/room-details';
 @import '../Common.blocks/radio-buttons/radio-buttons';
+@import '../Common.blocks/toggle-block/toggle-block';
+@import '../Common.blocks/toggle-button/toggle-button';
