--- a/Common.blocks/form-elements/form-elements.pug
+++ b/Common.blocks/form-elements/form-elements.pug
@@ -1,3 +1,4 @@
+include ./__toggle-separator/form-elements__toggle-separator.pug
 include ./__component-title/form-elements__component-title.pug
 include ./__middle-col/form-elements__middle-col.pug
 include ./__columns-wrapper/form-elements__columns-wrapper.pug
@@ -25,3 +26,4 @@ mixin form-elements(modifiers, ...argsArr)
 +form-elements__columns-wrapper
 +form-elements__middle-col
 +form-elements__component-title
++form-elements__toggle-separator
