--- a/Common.blocks/radio-buttons/radio-buttons.scss
+++ b/Common.blocks/radio-buttons/radio-buttons.scss
@@ -56,3 +56,4 @@
 @import './__label/radio-buttons__label';
 @import './__radio-button/radio-buttons__radio-button';
 @import './__radio-button/_active/radio-buttons__radio-button_active';
+@import './__radio-button/_state/radio-buttons__radio-button_state_active';
